# requests-negotiate-sspi

./: .gitignore  .travis.yml  LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
requests_negotiate/: __init__.py  requests_negotiate.py
requests_negotiate_sspi/: __init__.py  requests_negotiate_sspi.py  version.py
