[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "requests-negotiate-sspi"
description = "This package allows for Single-Sign On HTTP Negotiate authentication using the requests library on Windows."
version = "0.6.0"
license = "Apache-2.0"
authors = ["Brandon Davidson", "PyAnsys Maintainers"]
maintainers = ["PyAnsys Maintainers <pyansys.maintainers@ansys.com>"]
repository = "https://github.com/da1910/requests-negotiate-sspi"
documentation = "https://github.com/da1910/requests-negotiate-sspi"
readme = "README.md"
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]

include = ["README.md", "LICENSE.txt"]

[tool.poetry.dependencies]
python = ">=3.7.2,<3.11"

# Packages for core library
pywin32 = "^304"
requests = "^2.26"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
mypy = "^0.982"
codespell = "^2.2.1"
tox = "^3.26.0"
tox-poetry = "^0.4.1"
isort = "^5.10.1"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'

[tool.isort]
profile = "black"
src_paths = ["requests_negotiate_sspi"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = lint

[testenv]
commands =
  black --check ./requests_negotiate_sspi
  isort ./requests_negotiate_sspi
  codespell ./requests_negotiate_sspi
  mypy ./requests_negotiate_sspi
"""